api/src/test/java/org/openmrs/report/ReportSchemaXmlTest.java was already removed before Azuro's commit